--- a/frontend/src/app/components/todo-main/todo-bar/todo-search/todo-search.component.html
+++ b/frontend/src/app/components/todo-main/todo-bar/todo-search/todo-search.component.html
@@ -4,7 +4,7 @@
     class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
   >
     <svg
-      class="h-5 w-5 text-gray-400"
+      class="h-5 w-5 text-gray"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 20 20"
       fill="currentColor"
@@ -21,6 +21,6 @@
     [ngModel]="searchTerm"
     (ngModelChange)="onSearch($event)"
     placeholder="Search todos..."
-    class="block w-full pl-10 pr-3 py-2 border border-gray-200 rounded-lg text-sm placeholder-gray-500 focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
+    class="block w-full pl-10 pr-3 py-2 border border-gray rounded-lg text-sm placeholder-gray focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary"
   />
 </div>
