--- a/frontend/src/app/components/todo-main/todo-bar/todo-sort/todo-sort.component.html
+++ b/frontend/src/app/components/todo-main/todo-bar/todo-sort/todo-sort.component.html
@@ -1,7 +1,7 @@
 <!-- src/app/components/todo-main/todo-bar/todo-sort/todo-sort.component.html -->
 <button
   (click)="toggleSort()"
-  class="cursor-pointer inline-flex items-center px-4 py-2 border border-gray-200 rounded-lg text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-1 focus:ring-blue-500"
+  class="cursor-pointer inline-flex items-center px-4 py-2 border border-gray rounded-lg text-sm font-medium text-dark bg-light hover:bg-gray/5 focus:outline-none focus:ring-1 focus:ring-primary"
 >
   <span>Due Date</span>
   <ng-icon
