--- a/frontend/src/app/components/todo-main/todo-list/todo-list.component.html
+++ b/frontend/src/app/components/todo-main/todo-list/todo-list.component.html
@@ -1,7 +1,7 @@
 <!-- src/app/components/todo-main/todo-list/todo-list.component.html -->
-<div class="space-y-4">
+<div>
   <!-- Todo Items -->
-  <div class="divide-y divide-gray-100">
+  <div class="divide-y divide-gray/10">
     <app-todo-item
       *ngFor="let todo of todos"
       [todo]="todo"
