--- a/frontend/src/app/components/todo-main/todo-list/no-todos/no-todos.component.html
+++ b/frontend/src/app/components/todo-main/todo-list/no-todos/no-todos.component.html
@@ -1,7 +1,20 @@
-<div class="no-todos">
-  <mat-icon [class.large]="true">{{ icon }}</mat-icon>
-  <h3>{{ message }}</h3>
-  <p *ngIf="showAddHint">
-    Click the <mat-icon>add</mat-icon> button above to add a new todo
-  </p>
+<div class="text-center py-12 bg-gray-50 rounded-lg">
+  <div class="text-gray-500">
+    <ng-icon
+      name="heroClipboard"
+      class="h-12 w-12 mx-auto mb-4"
+      size="62"
+    ></ng-icon>
+
+    <h3 class="text-lg font-medium mb-2">{{ message }}</h3>
+
+    <p
+      *ngIf="showAddHint"
+      class="text-sm flex items-center justify-center gap-2"
+    >
+      Click the
+      <ng-icon name="heroPlus" class="w-5 h-5" size="24"></ng-icon>
+      button above to add a new todo
+    </p>
+  </div>
 </div>
