--- a/frontend/src/app/components/todo-main/todo-bar/todo-search/todo-search.component.html
+++ b/frontend/src/app/components/todo-main/todo-bar/todo-search/todo-search.component.html
@@ -18,7 +18,7 @@
   </div>
   <input
     type="text"
-    [ngModel]="searchTerm"
+    [(ngModel)]="searchTerm"
     (ngModelChange)="onSearch($event)"
     placeholder="Search todos..."
     class="block w-full pl-10 pr-3 py-2 border border-gray rounded-lg text-sm placeholder-gray focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary"
