more styling changes

--- a/frontend/src/app/components/todo-main/todo-bar/todo-search/todo-search.component.html
+++ b/frontend/src/app/components/todo-main/todo-bar/todo-search/todo-search.component.html
@@ -20,7 +20,7 @@
     type="text"
     [(ngModel)]="searchTerm"
     (ngModelChange)="onSearch($event)"
-    placeholder="Search todos..."
+    placeholder="Search TO-DOs..."
     class="block w-full pl-10 pr-3 py-2 border border-gray rounded-lg text-sm placeholder-gray focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary"
   />
 </div>
